enhance CI workflow to install Docker and Docker Compose, and update container build process

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'
+          python-version: "3.10"
+
+      - name: Install Docker and Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
 
       - name: Install Python Dependencies
         run: |
@@ -39,5 +47,7 @@ jobs:
           cd bridges/node
           npm install
 
-      - name: Build Docker Containers
-        run: docker-compose build
+      - name: Build and Run Docker Containers
+        run: |
+          docker-compose build
+          docker-compose up -d
